--- a/app/assets/stylesheets/framework/_framework.scss
+++ b/app/assets/stylesheets/framework/_framework.scss
@@ -1,3 +1,7 @@
+// Sass Extensions
+
+@import "framework/functions/sass";
+
 // Settings
 
 @import "overrides";
@@ -18,6 +22,8 @@
 @import "framework/mixins/standards";
 
 // Components
+
+@import "framework/components/body";
 
 @import "framework/components/buttons";
 @import "framework/components/grid";
